# StyleID

./: .env.example  .gitignore  .vercelignore  README.md  account_deletion.py  ai_service.py  app.py  auth_handlers.py  auth_otp.py  config.py  db.py  email_service.py  eval_fashion_accuracy.py  index.py  pyproject.toml  requirements.txt  settings_store.py  translate_service.py  vercel.json
.vercel_test_site_packages/charset_normalizer-3.4.7.dist-info/: RECORD
.vercel_test_site_packages/distro-1.9.0.dist-info/: RECORD
.vercel_test_site_packages/flask-3.0.0.dist-info/: RECORD
.vercel_test_site_packages/httpx-0.27.2.dist-info/: RECORD
.vercel_test_site_packages/idna-3.18.dist-info/: RECORD
.vercel_test_site_packages/mysql_connector_python-8.3.0.dist-info/: RECORD
.vercel_test_site_packages/openai-1.12.0.dist-info/: RECORD
.vercel_test_site_packages/python_dotenv-1.0.0.dist-info/: RECORD
.vercel_test_site_packages/tqdm-4.68.3.dist-info/: RECORD
app_web_view/: pubspec.yaml
app_web_view/android/: gradle.properties
app_web_view/lib/: config.dart  main.dart
data/: fashion_style_dataset.json  landing.json  packages.json
scripts/: compact_item_style_rules.py  excel_benchmark_to_ground_truth.py  init_mysql.sql  init_sqlite.sql  normalize_item_capitalization.py  set_admin.py
static/css/: admin-v2.css  analyze-v2.css  footer-v2.css  landing-v2.css  login-v2.css  mobile-responsive.css  packages-v2.css  profile-v2.css  register-v2.css  shell-v2.css  stats-v2.css  style.css
static/data/: i18n.json
static/js/: admin.js  analyze-v2.js  analyze.js  app.js  (+5 more)
(+31 files in other folders)
