[project]
name = "styleid"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "requests>=2.28.0",
    "python-dotenv==1.0.0",
    "openai==1.12.0",
    "httpx<0.28.0",
    "Pillow>=10.2.0,<12",
    "werkzeug==3.0.1",
    "mysql-connector-python==8.3.0",
    "authlib==1.3.0",
    "PyJWT==2.10.1",
    "openpyxl>=3.1.0",
]

[tool.vercel]
entrypoint = "app:app"
